# aRtySt

./: Cargo.toml  README.md  TODO.txt  chars_braile.txt  temp.txt
.readme_img/: sponge_braile.txt  sponge_minimal.txt  sponge_normal.txt  waltuh.txt
src/: ditherer.rs  image_process.rs  kernel.rs  main.rs  matrix.rs  segment.rs  text.rs
